--- a/ChungMesonesCarlosLeePractica03/proyecto/formulario02.html
+++ b/ChungMesonesCarlosLeePractica03/proyecto/formulario02.html
@@ -10,20 +10,23 @@
 </head>
 
 <body>
-    <h1>Nuevo Usuario</h1>
-
-    <input type="button" value="Registro con Facebook">
-    <input type="button" value="Registro con Google">
-    <p>O registrase con</p>
     <div>
-        <input type="text" name="nombres" id="nombres" placeholder="Nombres">
-        <input type="text" name="apellidos" id="apellidos" placeholder="Apellidos">
+
+        <h1>Nuevo Usuario</h1>
+
+        <input type="button" value="Registro con Facebook">
+        <input type="button" value="Registro con Google">
+        <p>O registrase con</p>
+        <div>
+            <input type="text" name="nombres" id="nombres" placeholder="Nombres">
+            <input type="text" name="apellidos" id="apellidos" placeholder="Apellidos">
+        </div>
+        <input type="text" id="correo" placeholder="micorreo@dominio">
+        <br>
+        <input type="text" id="pass" placeholder="su contraseña"> <br>
+        <input type="checkbox" value="check"> Al crear esta cuenta, aceptas nuestros terminos & condiciones
+        <br><input type="button" value="Enviar">
     </div>
-    <input type="text" id="correo" placeholder="micorreo@dominio">
-    <br>
-    <input type="text" id="pass" placeholder="su contraseña"> <br>
-    <input type="checkbox" value="check"> Al crear esta cuenta, aceptas nuestros terminos & condiciones 
-    <br><input type="button" value="Enviar">
 
 </body>
 
