--- a/ChungMesonesCarlosLeePractica03/proyecto/curriculumv2.html
+++ b/ChungMesonesCarlosLeePractica03/proyecto/curriculumv2.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <meta name="description" content="CV de Carlos Lee Chung Mesones">
     <meta name="keywords" content="CV, USAT, Sistemas">
     <meta name="author" content="Carlos Lee Chung Mesones">
@@ -13,46 +14,107 @@
     <link rel="stylesheet" href="css/curriculum.css">
     <title>Carlos Lee Chung Mesones - CV</title>
 </head>
+
 <body>
     <header>
         <h1>Carlos Lee Chung Mesones</h1>
-        <a href="#perfil">Perfil</a>
-        <a href="#experiencia">Experiencia profesional</a>
-        <a href="#habilidades">Habilidades y conocimiento</a>
-        <a href="#educacion">Educación</a>
+        <div>
+            <a href="#perfil">Perfil</a>
+            <a href="#experiencia">Experiencia profesional</a>
+            <a href="#habilidades">Habilidades y conocimiento</a>
+            <a href="#educacion">Educación</a>
+        </div>
     </header>
     <hr>
+    <div class="box">
+        <h2>Datos Personales</h2>
+        <ul>
+            <li><strong>Ciudad:</strong>Chilayo</li>
+            <li><strong>Teléfono:</strong>945333315</li>
+            <li><strong>Fecha de Nacimiento:</strong>20/11/2002</li>
+            <li><strong>email:</strong>carlos.chung.754@gmail.com</li>
+        </ul>
+    </div>
+    <hr>
+    <div class="box">
+        <h2 id="experiencia">Experiencia profesional</h2>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Empresa / Organización</th>
+                    <th>Cargo</th>
+                    <th>Localización</th>
+                    <th>Desde-Hasta</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Don Pepe</td>
+                    <td>Programador</td>
+                    <td>Cix</td>
+                    <td>2018-2018</td>
+                </tr>
+                <tr>
+                    <td>Tienda</td>
+                    <td>Diseñador</td>
+                    <td>Chilayo</td>
+                    <td>2019-2020</td>
+                </tr>
+            </tbody>
 
-    <ul>
-        <li><strong>Ciudad:</strong>Chilayo</li>
-        <li><strong>Teléfono:</strong>945333315</li>
-        <li><strong>Fecha de Nacimiento:</strong>20/11/2002</li>
-        <li><strong>email:</strong>carlos.chung.754@gmail.com</li>
-    </ul>
+        </table>
+    </div>
 
-    <h2 id="experiencia">Experiencia profesional</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Empresa / Organización</th>
-                <th>Cargo</th>
-                <th>Localización</th>
-                <th>Desde-Hasta</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>empresa1</td>
-                <td>cargo1</td>
-                <td>lugar1</td>
-                <td>fechas1</td>
-            </tr>
-        </tbody>
+    <hr>
+    <div class="box">
 
-    </table>
+        <h2>Habilidades y conocimientos</h2>
+        <ul>
+            <li><strong>Desarrollo web:</strong> HTML5, CSS3, JavaScript, MySQL, responsive design</li>
+            <li><strong>Analitíca web/Métricas:</strong> Google Analytcs</li>
+            <li><strong>Emprendimiento:</strong> startups</li>
+            <li><strong>Aplicaciones Ofimaticas:</strong> Microsoft Office</li>
+            <li><strong>Marketing:</strong> redes sociales</li>
+        </ul>
+    </div>
+    <hr>
+    <div class="box">
 
+        <h2>Otros Cursos</h2>
 
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Titulo</th>
+                    <th>Entidad</th>
+                    <th>Condición</th>
+                    <th>Año</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Diseño responsivo</td>
+                    <td>USAT</td>
+                    <td>Estudiante</td>
+                    <td>2018</td>
+                </tr>
+                <tr>
+                    <td>Inteligencia Artificial</td>
+                    <td>USAT</td>
+                    <td>Estudiante</td>
+                    <td>2019</td>
+                </tr>
+                <tr>
+                    <td>Curso de ciencia de datos</td>
+                    <td>USAT</td>
+                    <td>Estudiante</td>
+                    <td>2023</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
 
 </body>
+
 </html>
