--- a/ChungMesonesCarlosLeePractica03/proyecto/entel-factura.html
+++ b/ChungMesonesCarlosLeePractica03/proyecto/entel-factura.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/factura.css">
     <title>Factura Telefónica</title>
     <meta http-equiv="content-type" content="text/html; charset = UTF-8"> 
 </head>
 <body>
-    <h1 style="color: blue;"><em> Entel S.A.</em></h1>
+    <h1><em> Entel S.A.</em></h1>
     <table border="1">
         <caption>Factura detallada</caption>
 
